--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-web-sys = "0.3.69"
+web-sys = { version = "0.3.69", features = ["console"] }
+web-time = { version = "1.1.0", features = ["serde"] }
 yew = { version = "0.21.0", features = ["csr"] }
 
 [build]
